--- a/todo.txt
+++ b/todo.txt
@@ -46,3 +46,15 @@ early enemies not shooting (FIXED)
 label for module chance (FIXED)
 one big asteroid (FIXED)
 random direction pickup text (FIXED)
+
+area static (FIXED)
+blue enemy fast (FIXED)
+cluster not all at once (FIXED)
+modules prices or reducing drop rate (FIXED)
+
+seeker nerf fix. too fast speed scaling, not even leaving the hitbox (FIXED)
+enemy 5 interupt attack (FIXED)
+less asteroids (FIXED)
+zones closer (FIXED)
+less chance for big items (FIXED)
+bounty position not updating (FIXED)
